fixing details in styles on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,7 +21,7 @@ body {
     background-image: url("./images/cielo-desk.jpg");
   }
 
-  @media only screen and (max-device-width : 870px) and (orientation: landscape) {
-    height: 177vh;
-  }
+  // @media only screen and (max-device-width : 870px) and (orientation: landscape) {
+  //   height: 177vh;
+  // }
 }
