--- a/src/components/Smcard/Smcard.scss
+++ b/src/components/Smcard/Smcard.scss
@@ -5,6 +5,10 @@
   height: 85px;
   background: rgba(255, 255, 255, 0.5);
   border-radius: 20px;
+  @media only screen and (min-width: 280px) and (max-width: 360px){
+    width: 57px;
+    height: 75px;
+  }
 }
 
 .hour {
@@ -15,6 +19,10 @@
 
   .icon {
     width: 28px;
+  }
+
+  @media only screen and (min-width: 280px) and (max-width: 360px) {
+    font-size: 14px;
   }
 }
 
