--- a/src/components/Weather/Weather.scss
+++ b/src/components/Weather/Weather.scss
@@ -1,31 +1,49 @@
+.data-container {
+  @media screen and (min-width: 768px){
+    margin-top: 4%;
+  }
+}
+
 .weather {
   display: flex;
   flex-direction: column;
   font-family: 'Roboto', sans-serif;
   position: relative;
-  bottom: -300px;
+  bottom: -12rem;
 
   @media screen and (min-width: 700px){
-    bottom: -170px;
+    bottom: -9rem;
+  }
+  @media only screen and (min-width: 280px) and (max-width: 360px) {
+    bottom: -10rem;
   }
 
 
   .icon {
     width: 60px;
+    @media only screen and (min-width: 280px) and (max-width: 360px)  {
+      width: 28px;
+    }
   }
 
   .weather-text  {
     color: white;
     font-weight: 300;
     font-size: 18px;
+    @media only screen and (min-width: 280px) and (max-width: 360px) {
+      font-size: 13px;
+    }
   }
 
   .weather-num {
     color: white;
     font-weight: 300;
-    font-size: 100px;
+    font-size: 85px;
     position: relative;
     bottom: 12px;
+    @media only screen and (min-width: 280px) and (max-width: 360px) {
+      font-size: 55px;
+    }
   }
 }
 
